--- a/django-geode-geocoding/geode_geocoding/templates/geode-geocoding/base.html
+++ b/django-geode-geocoding/geode_geocoding/templates/geode-geocoding/base.html
@@ -1,4 +1,4 @@
-{% extends 'geocoding/index.html' %}
+{% extends 'geode-geocoding/index.html' %}
 {% load i18n %}
 {% block body_block %}
 <div class="container-fluid">
